Rework first tutorial